<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/me" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                style="@style/profileInformation">

                <TextView
                    style="@style/textView.InLinearLayout.Count"
                    android:text="@string/post_count"/>

                <TextView
                    style="@style/textView.InLinearLayout"
                    android:text="@string/post" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                style="@style/profileInformation">

                <TextView
                    style="@style/textView.InLinearLayout.Count"
                    android:text="@string/followers_count"/>

                <TextView
                    style="@style/textView.InLinearLayout"
                    android:text="@string/followers"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                style="@style/profileInformation">

                <TextView
                    style="@style/textView.InLinearLayout.Count"
                    android:text="@string/following_count"/>

                <TextView
                    style="@style/textView.InLinearLayout"
                    android:text="@string/following"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quote"
            style="@style/textView"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designer"/>

        <TextView
            android:text="@string/bio1"
            style="@style/textView.Bio"/>

        <TextView
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/bio2"
            style="@style/textView.Bio"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            style="@style/textView"/>

    </LinearLayout>

</LinearLayout>